@@ -13,6 +13,10 @@ ast2pt.cmx: $(OTOP)/parsing/asttypes.cmi $(OTOP)/parsing/location.cmx \
     pcaml.cmx ast2pt.cmi 
 pcaml.cmo: mLast.cmi quotation.cmi reloc.cmi spretty.cmi pcaml.cmi 
 pcaml.cmx: mLast.cmi quotation.cmx reloc.cmx spretty.cmx pcaml.cmi 
+crc.cmo: $(OTOP)/otherlibs/dynlink/dynlink.cmi 
+crc.cmx: $(OTOP)/otherlibs/dynlink/dynlink.cmx 
+pcaml.cmo: ast2pt.cmi mLast.cmi quotation.cmi reloc.cmi spretty.cmi pcaml.cmi 
+pcaml.cmx: ast2pt.cmx mLast.cmi quotation.cmx reloc.cmx spretty.cmx pcaml.cmi 
 quotation.cmo: mLast.cmi quotation.cmi 
 quotation.cmx: mLast.cmi quotation.cmi 
 reloc.cmo: mLast.cmi reloc.cmi 
