@@ -1,3 +1,5 @@
+- [12 may 2004] Added to the camlp4 tools the -version option that prints
+  the version number, in the same way as the other ocaml tools.
 - [12 may 04] Locations are now handled as in OCaml. The main benefit
   is that line numbers are now correct in error messages. However, this
   slightly changes the interface of a few Camlp4 modules (see ICHANGES).
